--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,7 @@ LOG_CHANNEL=stack
 LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
+LOG_DAILY_DAYS=14
 
 DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
